# ghosted

./: .gitignore  PLAN.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: schemas.py
backend/app/routers/: clean.py  compare.py  detect.py  experiment.py  health.py  scan.py
backend/app/services/: comparison.py  detector_registry.py  unicode_scanner.py
backend/app/services/detectors/: base.py  groq_llama.py  hf_roberta.py  sapling.py
backend/scripts/: run_experiment.py
backend/tests/: test_comparison.py  test_routers.py  test_unicode_scanner.py
backend/tests/fixtures/: sample_texts.py
